k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: accounting
  labels:
    istio-injection: enabled
    environment: production
